--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,13 +1,18 @@
-<!DOCTYPE html>
 <html>
 
-<head>
-  <title>Lab Express Basic Authentication</title>
-  <link rel='stylesheet' href='/styles/style.css' />
-</head>
+  <head>
+    <title>Lab Express Basic Authentication</title>
+    <link rel='stylesheet' href='/styles/style.css' />
+  </head>
 
-<body>
-  {{{body}}}
-</body>
+  <body>
+
+    <nav>
+      <a href='/'>Home</a>
+      <a href='/login'>Login</a>
+      <a href='/register'>Sign Up</a>
+    </nav>
+    {{{body}}}
+  </body>
 
 </html>
