--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,8 +9,22 @@
 
     <nav>
       <a href='/'>Home</a>
-      <a href='/login'>Login</a>
-      <a href='/register'>Sign Up</a>
+
+      {{#if user}}
+
+        <!-- <a href='/logout'>Logout</a> -->
+
+        <form action='/logout' method='POST'>
+          <button>Logout</button>
+        </form>
+
+        <a href='/profile'> See Profile</a>
+
+      {{else}}
+        <a href='/login'>Login</a>
+        <a href='/register'>Sign Up</a>
+
+      {{/if}}
     </nav>
     {{{body}}}
   </body>
